name:              Chernobog
version:           0.0.1
license:           BSD3
license-file:      LICENSE
author:            Roger Turnau
maintainer:        Roger Turnau
synopsis:          A Haskell blog system with a MongoDB backend
description:       After Yann Esposito's Yosog
category:          Web
stability:         Experimental
cabal-version:     >= 1.10.0
build-type:        Simple
homepage:          

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.Echo
                     Handler.Mirror
                     Handler.Blog
                     Handler.Format

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2
        
    Default-Language: Haskell2010
    
    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                GADTs
                GeneralizedNewtypeDeriving
                TypeFamilies
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                KindSignatures


    build-depends: base                          >= 4          && < 5
                 -- , yesod-platform                >= 1.0        && < 1.3
                 , yesod                         >= 1.0        && < 1.3
                 , yesod-core                    >= 1.0        && < 1.3
                 , yesod-auth                    >= 1.0        && < 1.3
                 , yesod-static                  >= 1.0        && < 1.3
                 , yesod-default                 >= 1.0        && < 1.3
                 , yesod-form                    >= 1.0        && < 1.3
                 , yesod-test                    >= 0.2        && < 0.4
                 , clientsession                 >= 0.7.3      && < 0.9
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 0.9        && < 1.1
                 , persistent-mongoDB            >= 0.9        && < 2.10
                 , template-haskell
                 , hamlet                        >= 1.0        && < 1.2
                 , shakespeare-css               >= 1.0        && < 1.2
                 , shakespeare-js                >= 1.0        && < 1.2
                 , shakespeare-text              >= 1.0        && < 1.2
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.2        && < 1.4
                 , yaml                          >= 0.7        && < 0.9
                 , http-conduit                  >= 1.4        && < 1.8
                 , directory                     >= 1.1        && < 1.2
                 , warp                          >= 1.2        && < 1.4
                 , data-default

executable         Chernobog
    if flag(library-only)
        Buildable: False

    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , Chernobog
                     , yesod-default
    Default-Language: Haskell2010

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , Chernobog
                 , yesod-test
                 , yesod-default
                 , yesod-core
                 , persistent                    >= 1.0        && < 1.1
                 , persistent-mongoDB     >= 1.0        && < 1.1
